--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.7.3",
     "input-otp": "^1.4.2",
     "lovable-tagger": "^1.1.8",
     "lucide-react": "^0.488.0",
@@ -52,6 +53,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2",
