--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
